<resources>

    <string name="app_name">Menu Tablet</string>

    <!-- Main activity -->
    <string name="main_activity_menu">MENU</string>
    <string name="main_activity_email_hint">Email address</string>
    <string name="main_activity_password_hint">Password</string>
    <string name="main_activity_sign_in">SIGN IN</string>
    <string name="main_activity_service_timeline">SERVICE TIMELINE</string>
    <string name="main_activity_service_timeline_past_orders">SERVICE TIMELINE - PAST ORDERS</string>
    <string name="main_activity_log_out">LOG OUT</string>

    <!-- Order activity -->
    <string name="order_activity_table">TABLE</string>
    <string name="order_activity_time">TIME</string>
    <string name="order_activity_order_info">Order info</string>
    <string name="order_activity_orders_to_serve">Orders to serve</string>
    <string name="order_activity_served_orders">Served orders</string>
    <string name="order_activity_finished">Finished</string>
    <string name="order_activity_active">Active</string>

    <!-- Dialogs -->
    <string name="dialog_loading">Loading&#8230;</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_body_network_problem">Network problem, please try again.</string>
	<string name="dismiss">DISMISS</string>
</resources>