<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="115px"
    android:paddingRight="115px"
    android:paddingTop="122px" >

    <!-- <LinearLayout -->
    <!-- android:layout_width="280dp" -->
    <!-- android:layout_height="65dp" -->
    <!-- android:background="@color/menu_main_orange_dark" -->
    <!-- android:gravity="center_vertical" -->
    <!-- android:orientation="horizontal" > -->
    <!-- <ImageView -->
    <!-- android:layout_width="27dp" -->
    <!-- android:layout_height="27dp" -->
    <!-- android:layout_marginLeft="20dp" -->
    <!-- android:layout_marginRight="5dp" -->
    <!-- android:scaleType="centerInside" -->
    <!-- android:src="@drawable/logo" /> -->
    <!-- <com.s7design.menutablet.views.MenuTextView -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:text="@string/main_activity_menu" -->
    <!-- android:textColor="@color/white" -->
    <!-- android:textSize="19sp" -->
    <!-- android:textStyle="bold" /> -->
    <!-- </LinearLayout> -->

    <LinearLayout
        android:layout_width="525px"
        android:layout_height="444px"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="250px"
            android:layout_height="82px"
            android:layout_gravity="left"
            android:layout_marginBottom="60px"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            android:src="@drawable/menu_tablet_login_logo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/menu_main_gray_light_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78px"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="36px"
                android:layout_height="36px"
                android:layout_marginRight="17px"
                android:src="@drawable/menu_tablet_login_username" />

            <com.s7design.menutablet.views.MenuEditText
                android:id="@+id/editTextEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/main_activity_email_hint"
                android:inputType="textEmailAddress"
                android:text="test"
                android:textColor="@color/menu_main_gray"
                android:textColorHint="@color/menu_main_gray_light"
                android:textSize="25sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/menu_main_gray_light_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78px"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="36px"
                android:layout_height="36px"
                android:layout_marginRight="17px"
                android:src="@drawable/menu_tablet_login_password" />

            <com.s7design.menutablet.views.MenuEditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/main_activity_password_hint"
                android:inputType="textPassword"
                android:text="hello"
                android:textColor="@color/menu_main_gray"
                android:textColorHint="@color/menu_main_gray_light"
                android:textSize="25sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginBottom="70px"
            android:background="@color/menu_main_gray_light_divider" />

        <com.s7design.menutablet.views.MenuButton
            android:id="@+id/buttonSignIn"
            style="@style/Menu_Button_Orange"
            android:layout_width="250px"
            android:layout_height="70px"
            android:text="@string/main_activity_sign_in"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>